# aethercore

./: .gitignore  .golangci.yml  AUTH_SPEC.md  CODE_OF_CONDUCT.md  README.md  SECURITY.md  V2_MASTER_PLAN.md  core-test.out  go.mod
.github/workflows/: ci.yml
cmd/aether/: audit_cmd.go  auth.go  discord.go  main.go  scaffold.go  telegram.go
core/: event_loop.go  event_loop_test.go  ipc_client.go  llm.go  mesh_discovery.go  mesh_discovery_test.go  mesh_integration_test.go  mesh_propagation.go  mesh_propagation_test.go  mesh_timeout.go  mesh_timeout_test.go  mock_ollama.go  mtls.go  mtls_test.go  tool.go  tool_test.go  verified_tool.go
core/audit/: block.go  chain.go  chain_test.go  event.go  local_appender.go  local_appender_test.go  logger.go
core/ipc/: ipc.pb.go  ipc_grpc.pb.go
core/llm/: cost_router.go  cost_router_test.go  fallback_router.go  fallback_router_test.go  latency_router.go  latency_router_test.go  orchestrator.go  retry_test.go  router.go  types.go
core/memory/: engine.go  engine_test.go  types.go  zestdb_adapter.go  zestdb_adapter_test.go
core/security/: keyring.go  keyring_test.go  llm_verifier.go  llm_verifier_test.go  manifest.go  manifest_validator.go  manifest_validator_test.go  mock_guard.go  orchestrator_test.go  regex_scanner.go  regex_scanner_test.go  semantic_analyzer.go  semantic_analyzer_test.go  tool_verifier.go
core/tools/: sys_info.go  (+1 more)
docs/: IPC_SECURITY.md
memory/: signed_store.go  signed_store_test.go  vector_store.go
proto/: buf.gen.yaml  ipc.proto
runtime/: Cargo.toml  build.rs
runtime/src/: ipc.rs  main.rs  manifest.rs  wasm_engine.rs
scripts/: batch_59_65.go  commit_batch_1.sh  commit_batch_2.sh  commit_batch_3.sh  commit_batch_4.sh  e2e_validate.sh
sdk/: registry.go
sdk/rust/: Cargo.toml
sdk/rust/src/: lib.rs  manifest.rs  task.rs
(+11 files in other folders)
