[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net"] }
tokio-stream = "0.1"
wasmtime = "27"
ed25519-dalek = { version = "2.1", features = ["serde"] }
serde_json = "1.0"
hex = "0.4"
sha2 = "0.10"
uuid = { version = "1.8", features = ["v4", "fast-rng", "macro-diagnostics"] }

# Linux-only: cgroup v2 and namespace isolation via raw syscalls
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link Time Optimization (Removes dead code across crates)
codegen-units = 1   # Maximum optimization at the cost of slower compile times
panic = "abort"     # Remove panic unwinding (reduces size)
strip = true        # Strip symbols from the binary
